# client-cli

./: .dockerignore  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  client-cli.env  client-cli.yml  client-library.yml  docker-compose.yml  pantos-client-cli.conf  pantos-client-library.conf  pantos-client.sh  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: ISSUE_REPORT.yml  feature_report.yml
.github/workflows/: build.yaml  ci.yaml  docker-vulnerabilities.yaml  main.yaml  release.yaml  sonar.yaml
.github/workflows/config/: trivy.yaml
pantos/: client-cli.env  client-cli.yml  client-library.env  client-library.yml
pantos/cli/: __init__.py  __main__.py  application.py  configuration.py
pantos/client/: library
pantos/client/cli/: __main__.py  application.py  configuration.py  exceptions.py
tests/: conftest.py  test.keystore  test__main__.py
