[tool.poetry]
name = "pantos-client-cli"
version = "2.0.1"
description = "Client CLI for engaging with the Pantos system"
authors = ["Pantos GmbH <contact@pantos.io>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "pantos"}
]
include = [
    "pantos/client-library.yml",
    "pantos/client-library.env",
    "pantos/client-cli.yml",
    "pantos/client-cli.env",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pantos"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"

[tool.poetry.group.lint.dependencies]
bandit = "1.7.10"
flake8 = "7.1.1"
isort = "5.13.2"
mypy = "1.12.0"
types-pyyaml = "6.0.12.20240917"
types-requests = "2.32.0.20241016"
yapf = "0.40.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"

[tool.poetry.dependencies]
python = "^3.10"
pantos-common = "4.0.1"
pantos-client-library = "3.0.1"
Cerberus = "1.3.4"
PyYAML = "6.0.1"
requests = "2.32.3"
web3 = "6.5.0"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pantos-cli = "pantos.cli.__main__:main"
